# plutus-extra

./: .gitignore  .hlint.yaml  CHANGELOG.md  README.md  cabal-haskell.nix.project  cabal.project  default.nix  flake.nix  hie.yaml  nix-stable-shell.nix  plutus-extra.cabal  shell.nix  update-sha256map.sh
.github/: format.sh  lint.sh
nix/: ci.nix  default.nix  haskell.nix  sources.json
plutus-asdata/: plutus-asdata.cabal
plutus-asdata/src/PlutusTx/: AsData.hs
plutus-asdata/src/PlutusTx/AsData/: Internal.hs
plutus-asdata/src/PlutusTx/AsData/Internal/: TH.hs
plutus-collection/: CHANGELOG.md  Makefile  README.md  plutus-collection.cabal
plutus-context-builder/: CHANGELOG.md  Makefile  README.md  plutus-context-builder.cabal
plutus-context-builder/src/Test/Plutus/: ContextBuilder.hs
plutus-context-builder/src/Test/Plutus/ContextBuilder/: Internal.hs  Minting.hs
plutus-deriving/: CHANGELOG.md  Makefile  README.md  plutus-deriving.cabal
plutus-deriving/src/PlutusTx/: Deriving.hs
plutus-deriving/test/: Test.hs
plutus-deriving/test/laws/: Main.hs
plutus-deriving/test/size/: Main.hs
plutus-extra/: CHANGELOG.md  Makefile  README.md  plutus-extra.cabal
plutus-extra/src/Plutus/Contract/Test/: Extra.hs
plutus-extra/src/Plutus/PAB/: CurrencyForge.hs
plutus-extra/src/Plutus/V1/Ledger/: Extra.hs
plutus-extra/src/Plutus/V1/Ledger/Address/: Extra.hs
plutus-extra/src/Plutus/V1/Ledger/Contexts/: Extra.hs
plutus-extra/src/Plutus/V1/Ledger/Value/: Extra.hs  Norm.hs
plutus-extra/src/PlutusTx/: Bimap.hs  IsCoexistingData.hs  NonEmpty.hs  Set.hs  UniqueMap.hs
plutus-extra/src/PlutusTx/Data/: Extra.hs
plutus-extra/src/PlutusTx/Either/: Extra.hs
plutus-extra/src/PlutusTx/Foldable/: Extra.hs
plutus-extra/src/PlutusTx/UniqueMap/: Internal.hs
plutus-extra/test/Suites/Plutus/PAB/: CurrencyForge.hs
plutus-extra/test/Suites/PlutusTx/: NonEmpty.hs  Set.hs
plutus-extra/test/Suites/PlutusTx/Data/: Extra.hs
plutus-golden/: CHANGELOG.md  Makefile  README.md  plutus-golden.cabal
plutus-golden/src/Test/Tasty/Plutus/: Generator.hs  Golden.hs  Internal.hs
plutus-golden/src/Test/Tasty/Plutus/Golden/: Data.hs  Internal.hs  JSON.hs  ToSchema.hs
plutus-laws/: CHANGELOG.md  Makefile  README.md  plutus-laws.cabal
plutus-laws/src/Test/Tasty/Plutus/: Arbitrary.hs  Laws.hs
plutus-list/: CHANGELOG.md  README.md  plutus-list.cabal
plutus-list/src/PlutusTx/AssocMap/: Natural.hs
plutus-list/src/PlutusTx/List/: Natural.hs  Ord.hs
plutus-list/test/: Main.hs
plutus-list/test/size/: Main.hs
plutus-numeric/: CHANGELOG.md  Makefile  README.md  plutus-numeric.cabal
plutus-numeric/bench/: Helpers.hs  Main.hs  ScaleNat.hs
plutus-numeric/golden/data/: PlutusTx-NatRatio-Internal-NatRatio.json  PlutusTx-Natural-Internal-Natural.json  PlutusTx-Positive-Internal-Positive.json  PlutusTx-Ratio-Rational.json  PlutusTx-Rational-Internal-Rational.json
plutus-numeric/golden/json/: PlutusTx-NatRatio-Internal-NatRatio.json  PlutusTx-Natural-Internal-Natural.json  PlutusTx-Positive-Internal-Positive.json  PlutusTx-Ratio-Rational.json  PlutusTx-Rational-Internal-Rational.json
plutus-numeric/golden/to-schema/: PlutusTx-NatRatio-Internal-NatRatio.json  PlutusTx-Rational-Internal-Rational.json
plutus-numeric/src/PlutusTx/: NatRatio.hs  Natural.hs  Positive.hs  Rational.hs  SchemaUtils.hs
plutus-numeric/src/PlutusTx/NatRatio/: Internal.hs  QQ.hs
plutus-numeric/src/PlutusTx/Natural/: Internal.hs  QQ.hs
plutus-numeric/src/PlutusTx/Numeric/: Extra.hs  Gen.hs  Laws.hs  Orphans.hs
plutus-numeric/src/PlutusTx/Positive/: Internal.hs  QQ.hs
plutus-numeric/src/PlutusTx/Ratio/: Extra.hs
plutus-numeric/src/PlutusTx/Rational/: Internal.hs  QQ.hs
plutus-numeric/test/: Compilation.hs  Helpers.hs  Main.hs
plutus-numeric/test/Suites/: NatRatio.hs  Numeric.hs
plutus-numeric/test/golden/: Main.hs
plutus-numeric/test/laws/: Main.hs
plutus-numeric/test/natratio-compare-size/: Main.hs
plutus-numeric/test/natural-compare-size/: Main.hs
plutus-numeric/test/property/: Compilation.hs  Helpers.hs  Main.hs
plutus-numeric/test/property/Suites/: Consistency.hs  NatRatio.hs  Natural.hs  Numeric.hs  Rational.hs
plutus-numeric/test/rational-compare-size/: Main.hs
plutus-numeric/test/size/: Integer.hs  Main.hs  NatRatio.hs  Natural.hs  Rational.hs
plutus-numeric/test/size/Compare/: NatRatio.hs  Natural.hs  Rational.hs
plutus-numeric/test/size/Functions/: Integer.hs  NatRatio.hs  Natural.hs  PTxRational.hs  Rational.hs
plutus-numeric/test/sizing-proof/: Functions.hs  Main.hs
plutus-pretty/: CHANGELOG.md  Makefile  README.md  plutus-pretty.cabal
plutus-pretty/src/Plutus/V1/: Pretty.hs
plutus-pretty/src/PlutusTx/: Skeleton.hs
plutus-pretty/src/PlutusTx/Skeleton/: Builder.hs  Internal.hs  QQ.hs  String.hs
plutus-pretty/src/Text/Show/Pretty/: Extra.hs
plutus-pretty/test/properties/: Main.hs
plutus-pretty/test/script-size/: Main.hs  Test.hs
plutus-script-context/: CHANGELOG.md  Makefile  README.md  plutus-script-context.cabal
plutus-size-check/: CHANGELOG.md  Makefile  README.md  plutus-size-check.cabal
quickcheck-plutus-instances/: CHANGELOG.md  Makefile  README.md  quickcheck-plutus-instances.cabal
quickcheck-plutus-instances/src/Test/QuickCheck/Plutus/: Instances.hs  Modifiers.hs
tasty-plutus/: CHANGELOG.md  Makefile  README.md  tasty-plutus.cabal
tasty-plutus/src/Data/Portray/: Plutus.hs
tasty-plutus/src/Test/Tasty/Plutus/: Context.hs  Instances.hs  Internal.hs  Options.hs  TestData.hs  TestScript.hs  WithScript.hs
tasty-plutus/src/Test/Tasty/Plutus/Context/: Internal.hs
tasty-plutus/src/Test/Tasty/Plutus/Internal/: Context.hs  DumpScript.hs  Env.hs  Estimate.hs  Feedback.hs  Minting.hs  Options.hs  Run.hs  TestScript.hs  WithScript.hs
tasty-plutus/src/Test/Tasty/Plutus/Options/: QQ.hs
tasty-plutus/src/Test/Tasty/Plutus/Script/: Property.hs  Size.hs  Unit.hs
tasty-plutus/src/Test/Tasty/Plutus/Validator/: Unit.hs
tasty-plutus/test/: Main.hs
tasty-plutus/test/Properties/: Main.hs  MintingPolicy.hs  SimpleValidator.hs  Validator.hs
(+45 files in other folders)
