cabal-version:      3.0
name:               plutus-extra
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-extensions:
    NoImplicitPrelude
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:
    , base                     ^>=4.14
    , record-dot-preprocessor  ^>=0.2.11
    , record-hasfield          ^>=1.0

  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fobject-code -fno-strictness -fplugin=RecordDotPreprocessor

  default-language:   Haskell2010

library
  import:          lang
  exposed-modules:
    Plutus.Contract.Test.Extra
    Plutus.PAB.CurrencyForge
    Plutus.PAB.OutputBus
    Plutus.PAB.PrettyLogger
    Plutus.V1.Ledger.Contexts.Extra
    Plutus.V1.Ledger.Extra
    Plutus.V1.Ledger.Interval.Extra
    Plutus.V1.Ledger.Time.Extra
    Plutus.V1.Ledger.Value.Extra
    PlutusTx.AssocMap.Extra
    PlutusTx.Bifunctor
    PlutusTx.Bimap
    PlutusTx.Data.Extra
    PlutusTx.Either.Extra
    PlutusTx.Error.Extra
    PlutusTx.Foldable.Extra
    PlutusTx.IsCoexistingData
    PlutusTx.List.Extra
    PlutusTx.Maybe.Extra
    PlutusTx.NonEmpty
    PlutusTx.PointFree.Extra
    PlutusTx.Set
    PlutusTx.Tuple.Extra
    PlutusTx.UniqueMap

  build-depends:
    , aeson              ^>=1.5.6.0
    , ansi-terminal      ^>=0.11
    , deepseq            ^>=1.4.4.0
    , foldl              ^>=1.4.12
    , freer-simple       ^>=1.2.1.1
    , lens               ^>=4.19.2
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-pab
    , plutus-tx
    , plutus-use-cases
    , prettyprinter      ^>=1.7.0
    , row-types          ^>=1.0.1.0
    , template-haskell   ^>=2.16.0.0

  hs-source-dirs:  src

test-suite plutus-extra-test
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Spec.hs
  other-modules:
    Suites.Plutus.PAB.CurrencyForge
    Suites.PlutusTx.Bimap
    Suites.PlutusTx.Data.Extra
    Suites.PlutusTx.NonEmpty
    Suites.PlutusTx.Set

  build-depends:
    , plutus-contract
    , plutus-extra
    , plutus-ledger
    , plutus-ledger-api
    , plutus-tx
    , QuickCheck         ^>=2.14.2
    , tasty              ^>=1.4.1
    , tasty-quickcheck   ^>=0.10.1.2

  hs-source-dirs: test
