cabal-version:      3.0
name:               plutus-golden
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:      base ^>=4.14
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies

library
  import:          lang
  exposed-modules: Test.Tasty.Plutus.Golden
  other-modules:   Test.Tasty.Plutus.Golden.Internal
  build-depends:
    , aeson              ^>=1.5.6.0
    , aeson-pretty       ^>=0.8.8
    , bytestring         ^>=0.10.12.0
    , directory          ^>=1.3.6.0
    , extra              ^>=1.7.9
    , filepath           ^>=1.4.2.1
    , openapi3           ^>=3.1.0
    , playground-common
    , plutus-ledger-api
    , plutus-tx
    , pretty             ^>=1.1.3.6
    , pretty-show        ^>=1.10
    , QuickCheck         ^>=2.14.2
    , random             ^>=1.2.0
    , splitmix           ^>=0.1.0.3
    , tagged             ^>=0.8.6.1
    , tasty              ^>=1.4.1
    , text               ^>=1.2.4.1
    , transformers       ^>=0.5.6.2
    , vector             ^>=0.12.3.0

  hs-source-dirs:  src
