cabal-version:      3.0
name:               plutus-laws
version:            3.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:      base ^>=4.14
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies

library
  import:          lang
  exposed-modules:
    Test.Tasty.Plutus.Arbitrary
    Test.Tasty.Plutus.Laws

  build-depends:
    , aeson             ^>=1.5.6.0
    , aeson-pretty      ^>=0.8.8
    , bytestring        ^>=0.10.12.0
    , invariant         ^>=0.5.3
    , plutus-tx
    , pretty            ^>=1.1.3.6
    , pretty-show       ^>=1.10
    , QuickCheck        ^>=2.14.2
    , tagged            ^>=0.8.6.1
    , tasty             ^>=1.4.1
    , tasty-quickcheck  ^>=0.10.1.2
    , text              ^>=1.2.4.1

  hs-source-dirs:  src
