cabal-version:      3.0
name:               plutus-list
version:            1.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:      base ^>=4.14
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies

library
  import:          lang
  exposed-modules:
    PlutusTx.List.Natural
    PlutusTx.List.Ord

  build-depends:
    , playground-common
    , plutus-numeric     ^>=4.2
    , plutus-tx
    , template-haskell   ^>=2.16.0.0

  hs-source-dirs:  src

test-suite plutus-list-properties
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , plutus-list
    , plutus-numeric    ^>=4.2
    , plutus-tx
    , tasty             ^>=1.4.1
    , tasty-quickcheck  ^>=0.10.1.2

  hs-source-dirs: test/property

test-suite plutus-list-size
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , plutus-ledger-api
    , plutus-list
    , plutus-numeric     ^>=4.2
    , plutus-size-check  ^>=1.1
    , plutus-tx
    , plutus-tx-plugin
    , tasty              ^>=1.4.1
    , tasty-quickcheck   ^>=0.10.1.2

  hs-source-dirs: test/size
