cabal-version:      3.0
name:               plutus-numeric
version:            3.0
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:      base ^>=4.14
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies

common test-lang
  import:        lang
  build-depends:
    , plutus-numeric
    , tasty           ^>=1.4.1

  ghc-options:   -threaded -O2 -rtsopts -with-rtsopts=-N

library
  import:          lang
  exposed-modules:
    PlutusTx.NatRatio
    PlutusTx.Natural
    PlutusTx.Numeric.Extra
    PlutusTx.Numeric.Gen
    PlutusTx.Ratio.Extra
    PlutusTx.SchemaUtils

  other-modules:
    PlutusTx.NatRatio.Internal
    PlutusTx.NatRatio.QQ
    PlutusTx.Natural.Internal
    PlutusTx.Natural.QQ

  build-depends:
    , aeson              ^>=1.5.6.0
    , hedgehog           ^>=1.0.5
    , openapi3           ^>=3.1.0
    , playground-common
    , plutus-tx
    , pretty-show        ^>=1.10
    , QuickCheck         ^>=2.14.2
    , recursion-schemes  ^>=5.1.3
    , template-haskell   ^>=2.16.0.0
    , text               ^>=1.2.4.1

  hs-source-dirs:  src

test-suite property
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Compilation
    Helpers
    Suites.Consistency
    Suites.NatRatio
    Suites.Natural
    Suites.Numeric

  build-depends:
    , plutus-tx
    , plutus-tx-plugin
    , QuickCheck        ^>=2.14.2
    , tasty-hunit       ^>=0.10.0.3
    , tasty-quickcheck  ^>=0.10.1.2

  hs-source-dirs: test/property

test-suite golden
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , plutus-golden  ^>=2.0
    , plutus-tx

  hs-source-dirs: test/golden

test-suite laws
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , plutus-laws       ^>=2.1
    , tasty-quickcheck  ^>=0.10.1.2

  hs-source-dirs: test/laws
