cabal-version:      3.0
name:               plutus-numeric
version:            5.1
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:      base ^>=4.14
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies

common test-lang
  import:        lang
  build-depends:
    , plutus-numeric
    , tasty           ^>=1.4.1

  ghc-options:   -threaded -O2 -rtsopts -with-rtsopts=-N

library
  import:          lang
  exposed-modules:
    PlutusTx.NatRatio
    PlutusTx.Natural
    PlutusTx.Numeric.Extra
    PlutusTx.Numeric.Gen
    PlutusTx.Numeric.Laws
    PlutusTx.Numeric.Orphans
    PlutusTx.Positive
    PlutusTx.Rational.QQ
    PlutusTx.SchemaUtils

  other-modules:
    PlutusTx.NatRatio.Internal
    PlutusTx.NatRatio.QQ
    PlutusTx.Natural.Internal
    PlutusTx.Natural.QQ
    PlutusTx.Positive.Internal
    PlutusTx.Positive.QQ

  build-depends:
    , aeson              ^>=1.5.6.0
    , deepseq            ^>=1.4.4.0
    , hedgehog           ^>=1.0.5
    , openapi3           ^>=3.1.0
    , playground-common
    , plutus-laws        ^>=3.0
    , plutus-tx
    , plutus-ledger-api
    , pretty-show        ^>=1.10
    , QuickCheck         ^>=2.14.2
    , recursion-schemes  ^>=5.1.3
    , template-haskell   ^>=2.16.0.0
    , text               ^>=1.2.4.1

  hs-source-dirs:  src

test-suite property
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Helpers
    Suites.Consistency
    Suites.NatRatio
    Suites.Natural

  build-depends:
    , plutus-tx
    , plutus-tx-plugin
    , pretty-show
    , QuickCheck        ^>=2.14.2
    , tasty-hunit       ^>=0.10.0.3
    , tasty-quickcheck  ^>=0.10.1.2

  hs-source-dirs: test/property

test-suite golden
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , plutus-golden                ^>=3.0
    , plutus-tx
    , quickcheck-plutus-instances  ^>=2.2

  hs-source-dirs: test/golden

test-suite laws
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , plutus-laws                  ^>=3.0
    , plutus-tx
    , quickcheck-plutus-instances  ^>=2.2
    , tasty-quickcheck             ^>=0.10.1.2

  hs-source-dirs: test/laws

test-suite size
  import:         test-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Compare.NatRatio
    Compare.Natural
    Functions.Integer
    Functions.NatRatio
    Functions.Natural
    Functions.PTxRational
    Integer
    NatRatio
    Natural

  build-depends:
    , plutus-ledger-api
    , plutus-size-check       ^>=2.0
    , plutus-tx
    , plutus-tx-plugin
    , tasty-expected-failure  ^>=0.12.3

  hs-source-dirs: test/size

benchmark scale-nat
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Helpers
  build-depends:
    , deepseq
    , plutus-numeric
    , plutus-tx
    , tasty
    , tasty-bench     ^>=0.3.1

  ghc-options:    -O2
  hs-source-dirs: bench
