cabal-version:      3.0
name:               plutus-pretty
version:            2.1
extra-source-files: CHANGELOG.md

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

  build-depends:      base ^>=4.14
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Werror -Wincomplete-record-updates
    -Wmissing-deriving-strategies

library
  import:          lang
  exposed-modules:
    Plutus.V1.Pretty
    PlutusTx.Skeleton
    Text.Show.Pretty.Extra

  other-modules:
    PlutusTx.Skeleton.Builder
    PlutusTx.Skeleton.Internal
    PlutusTx.Skeleton.QQ
    PlutusTx.Skeleton.String

  build-depends:
    , plutus-ledger-api
    , plutus-tx
    , pretty-show        ^>=1.10
    , template-haskell   ^>=2.16.0.0

  hs-source-dirs:  src

test-suite script-size
  import:         lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:  Test
  build-depends:
    , bytestring         ^>=0.10.12.0
    , cardano-api        ^>=1.30.0
    , plutus-ledger-api
    , plutus-pretty
    , plutus-tx
    , plutus-tx-plugin
    , serialise          ^>=0.2.3.0
    , tasty              ^>=1.4.1

  hs-source-dirs: test/script-size
